2010-07-02  DJ Delorie  <dj@redhat.com>

	* config/tc-rx.c (rx_bytesT): Add grown/shrank counters for
	relaxation.
	(rx_relax_frag): Prevent infinite loops of grow/shrink/grow/etc.

2010-07-01  H.J. Lu  <hongjiu.lu@intel.com>

	AVX Programming Reference (June, 2010)
	* config/tc-i386.c (cpu_arch): Add .xsaveopt, .fsgsbase, .rdrnd
	and .f16c.

	* doc/c-i386.texi: Document xsaveopt, fsgsbase, rdrnd and f16c.

2010-07-01  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/tc-arm.c (do_t_mov_cmp): Fix reporting of unpredictable and
	deprecated mov register instructions.

2010-07-01  Alan Modra  <amodra@gmail.com>

	* config/tc-ppc.c (toc_reloc_types): New variable.
	(md_assemble): Set it.
	(ppc_frob_file_before_adjust): Don't warn about toc section size
	if we have large toc relocs and no small toc relocs.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* config/tc-moxie.c (md_apply_fix): Delete set but otherwise
	unused variable.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* config/tc-maxq.h: Delete file.
	* config/tc-maxq.c: Delete file.
	* Makefile.am: Remove references to maxq.
	* configure.tgt: Likewise.
	* config/obj-coff.h: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2010-06-28  Alan Modra  <amodra@gmail.com>

	* config/obj-evax.h (S_SET_OTHER, S_SET_TYPE, S_SET_DESC): Don't define.
	* config/tc-crx.c (gettrap): Constify arg.
	(handle_LoadStor, get_cinv_parameters): Likewise.
	(getreg_image): Fix enum warning
	(md_assemble): Restore input line char.
	* config/tc-hppa.c (tc_gen_reloc): Fix enum warning.
	* config/tc-i960.c (mem_fmt): Rename var to fix shadow warning.
	* config/tc-sh.c (sh_fdpic): Only define when OBJ_ELF.
	(build_Mytes): Fix build failure for non-elf targets.
	* config/tc-tic4x.c (tic4x_eval): Restore terminator char.
	* config/tc-xtensa.c (xtensa_end_directive): Fix switch enum warning.

	* cgen.c (gas_cgen_md_apply_fix): Avoid set but unused warning.